<resources>
    <string name="app_name">TrackEn</string>

    <string name="empty_text">--</string>
    <string name="concern_name">Поставщик</string>
    <string name="fuel_type">Тип топлива</string>
    <string name="tank_up">Заправить (л)</string>
    <string name="tank_up_price">Сумма ($)</string>
    <string name="menu_item_save">Сохранить</string>
    <string name="menu_item_delete">Удалить</string>
    <string name="menu_item_edit">Редактировать</string>
    <string name="empty_value_message">"Список пуст"</string>
    <string name="menu_add_new_station">Добавить</string>
    <string name="btn_consume_fuel">Заправиться</string>
    <string name="btn_cancel_consume_fuel">Отмена</string>
    <string name="address">Адрес</string>
    <string name="table_counter">#</string>
    <string name="station_visit">Посещений</string>

    <string name="error_synchronize_station">Ошибка получения станций с Firebase</string>
    <string name="error_synchronize_consume">Ошибка получения заправок с Firebase</string>

    <string name="error_location">Невозможно определить позицию</string>
    <string name="error_address_location">Невозможно определить адрес</string>

    <string name="gas_station_empty_list">Список пуст. Добавте станцию</string>
    <string name="statistic_empty_list">Статистики посещений нет</string>

    <string name="error_empty_field">Ошибка. Пустые поля ввода</string>
    <string name="error_catch_data">Ошибка получение данных</string>

    <string name="db_success_inserted">Успешно созданно</string>
    <string name="db_success_updated">Успешно обновленно</string>
    <string name="db_success_deleted">Успешно удаленно</string>
    <string name="db_success_consume">Успешно заправленны</string>

    <string name="db_error_inserted">Добавление не удалось</string>
    <string name="db_error_updated">Обновление не удалось</string>
    <string name="db_error_deleted">Удаление не удалось</string>
    <string name="db_error_consume">Заправка не сохранена</string>

    <string name="alert_delete_title">Удалить?</string>
    <string name="alert_delete_message">Все данные будут удалены</string>

    <string name="unknown_error">Oooops something wrong</string>

    // List of TabLayout item title name
    <string-array name="tab_item_title">
        <item>Станции</item>
        <item>Статистика</item>
    </string-array>

    <string-array name="fuel_type_array">
        <item>Дизель</item>
        <item>Бензин</item>
        <item>Газ</item>
    </string-array>

    <string-array name="toast_error_array">
        <item>Один из полей пуст</item>
        <item>Возникла ошибка*</item>
        <item>Возникла ошибка*</item>
    </string-array>

</resources>