<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/btn_consume_fuel"
        app:showAsAction="always" />
    <group
        android:id="@+id/menu_edit_group"
        android:visible="false">
        <item
            android:id="@+id/menu_item_change_gas_station"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_item_edit" />
        <item
            android:id="@+id/menu_item_delete_gas_station"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/menu_item_delete" />
    </group>
</menu>